Better handling of pool auth failures and pools being down Show an inobtrusive notification if auth fails Show the modal dialog if all pools are down

--- a/MultiMiner.Xgminer/MultiMiner.Xgminer.csproj
+++ b/MultiMiner.Xgminer/MultiMiner.Xgminer.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuthenticationFailedArgs.cs" />
     <Compile Include="Bfgminer\MinerParameter.cs" />
     <Compile Include="CoinAlgorithm.cs" />
     <Compile Include="Device.cs" />
