Move settings items into a Settings split button / menu

--- a/MultiMiner.Win/MultiMiner.Win.csproj
+++ b/MultiMiner.Win/MultiMiner.Win.csproj
@@ -262,6 +262,8 @@
     <None Include="Resources\internet_browse.png" />
     <None Include="Resources\list-import.png" />
     <None Include="Resources\list-export.png" />
+    <None Include="Resources\application-option.png" />
+    <None Include="Resources\settings_options.png" />
     <Content Include="window_sel.ico" />
   </ItemGroup>
   <ItemGroup>
