--- a/MultiMiner.Xgminer.Api/MultiMiner.Xgminer.Api.csproj
+++ b/MultiMiner.Xgminer.Api/MultiMiner.Xgminer.Api.csproj
@@ -43,8 +43,10 @@
     <Compile Include="DeviceInformation.cs" />
     <Compile Include="LogEventArgs.cs" />
     <Compile Include="Parsers\DeviceInformationParser.cs" />
+    <Compile Include="Parsers\SummaryInformationParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ApiVerb.cs" />
+    <Compile Include="SummaryInformation.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
