Finishing work on parsing the Summary RPC API response

--- a/MultiMiner.Xgminer.Api/MultiMiner.Xgminer.Api.csproj
+++ b/MultiMiner.Xgminer.Api/MultiMiner.Xgminer.Api.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiContext.cs" />
+    <Compile Include="Parsers\ResponseTextParser.cs" />
     <Compile Include="Responses\DeviceInformationResponse.cs" />
     <Compile Include="LogEventArgs.cs" />
     <Compile Include="Parsers\DeviceInformationParser.cs" />
