--- a/MultiMiner.Coinchoose.Api/MultiMiner.Coinchoose.Api.csproj
+++ b/MultiMiner.Coinchoose.Api/MultiMiner.Coinchoose.Api.csproj
@@ -44,12 +44,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiContext.cs" />
-    <Compile Include="BaseCoin.cs" />
-    <Compile Include="CoinInformation.cs" />
+    <Compile Include="CoinInformationExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MultiMiner.Coin.Api\MultiMiner.Coin.Api.csproj">
+      <Project>{9e86f77a-68b9-4d72-82d2-855878ba8cb1}</Project>
+      <Name>MultiMiner.Coin.Api</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
