Handle errors returned by the CoinWarz API response

--- a/MultiMiner.Coin.Api/MultiMiner.Coin.Api.csproj
+++ b/MultiMiner.Coin.Api/MultiMiner.Coin.Api.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseCoin.cs" />
+    <Compile Include="CoinApiException.cs" />
     <Compile Include="CoinInformation.cs" />
     <Compile Include="IApiContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
