--- a/MultiMiner.Win/MultiMiner.Win.csproj
+++ b/MultiMiner.Win/MultiMiner.Win.csproj
@@ -268,6 +268,12 @@
     <None Include="Resources\application-option.png" />
     <None Include="Resources\settings_options.png" />
     <None Include="Resources\sort.png" />
+    <None Include="Resources\view_details.png" />
+    <None Include="Resources\view_small_icons.png" />
+    <None Include="Resources\view_large_icons.png" />
+    <None Include="Resources\view_list.png" />
+    <None Include="Resources\view_medium_icons.png" />
+    <None Include="Resources\hardware-find.png" />
     <Content Include="window_sel.ico" />
   </ItemGroup>
   <ItemGroup>
