--- a/MultiMiner.Win/MultiMiner.Win.csproj
+++ b/MultiMiner.Win/MultiMiner.Win.csproj
@@ -79,6 +79,7 @@
       <DependentUpon>CoinsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ApiLogEntry.cs" />
+    <Compile Include="Configuration\PerksConfiguration.cs" />
     <Compile Include="Extensions\DateTimeExtensions.cs" />
     <Compile Include="Extensions\DoubleExtensions.cs" />
     <Compile Include="Extensions\MiningStatisticsExtensions.cs" />
@@ -115,6 +116,12 @@
     </Compile>
     <Compile Include="Notifications\NotificationsControl.Designer.cs">
       <DependentUpon>NotificationsControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PerksForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PerksForm.Designer.cs">
+      <DependentUpon>PerksForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="ProgressForm.cs">
@@ -168,6 +175,9 @@
     <EmbeddedResource Include="Notifications\NotificationsControl.resx">
       <DependentUpon>NotificationsControl.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PerksForm.resx">
+      <DependentUpon>PerksForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ProgressForm.resx">
       <DependentUpon>ProgressForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -219,6 +229,10 @@
     <ProjectReference Include="..\MultiMiner.Coin.Api\MultiMiner.Coin.Api.csproj">
       <Project>{9e86f77a-68b9-4d72-82d2-855878ba8cb1}</Project>
       <Name>MultiMiner.Coin.Api</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MultiMiner.Coinbase.Api\MultiMiner.Coinbase.Api.csproj">
+      <Project>{95f6c880-7ab3-441b-8d41-28c0ad507b62}</Project>
+      <Name>MultiMiner.Coinbase.Api</Name>
     </ProjectReference>
     <ProjectReference Include="..\MultiMiner.Coinchoose.Api\MultiMiner.CoinChoose.Api.csproj">
       <Project>{d9b3f627-cb7a-454c-af8f-70c8fb584553}</Project>
@@ -288,6 +302,8 @@
     <None Include="Resources\hardware-find.png" />
     <None Include="Resources\computer-update.png" />
     <None Include="Resources\computer-coins.png" />
+    <None Include="Resources\application-add.png" />
+    <None Include="Resources\application-execute.png" />
     <Content Include="window_sel.ico" />
   </ItemGroup>
   <ItemGroup>
