--- a/MultiMiner.Win/MultiMiner.Win.csproj
+++ b/MultiMiner.Win/MultiMiner.Win.csproj
@@ -53,11 +53,11 @@
     <Compile Include="AboutForm.Designer.cs">
       <DependentUpon>AboutForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="AdvancedSettingsForm.cs">
+    <Compile Include="AdvancedMinerSettingsForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AdvancedSettingsForm.Designer.cs">
-      <DependentUpon>AdvancedSettingsForm.cs</DependentUpon>
+    <Compile Include="AdvancedMinerSettingsForm.Designer.cs">
+      <DependentUpon>AdvancedMinerSettingsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Configuration\ApplicationConfiguration.cs" />
     <Compile Include="CoinChooseForm.cs">
@@ -154,8 +154,8 @@
     <EmbeddedResource Include="AboutForm.resx">
       <DependentUpon>AboutForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AdvancedSettingsForm.resx">
-      <DependentUpon>AdvancedSettingsForm.cs</DependentUpon>
+    <EmbeddedResource Include="AdvancedMinerSettingsForm.resx">
+      <DependentUpon>AdvancedMinerSettingsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CoinChooseForm.resx">
       <DependentUpon>CoinChooseForm.cs</DependentUpon>
