--- a/MultiMiner.Utility/MultiMiner.Utility.csproj
+++ b/MultiMiner.Utility/MultiMiner.Utility.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationPaths.cs" />
     <Compile Include="ConfigurationReaderWriter.cs" />
     <Compile Include="IdleTimeFinder.cs" />
     <Compile Include="ObjectCopier.cs" />
