Introduced a configurable "shared config path" for most config files

--- a/MultiMiner.Utility/MultiMiner.Utility.csproj
+++ b/MultiMiner.Utility/MultiMiner.Utility.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="ApplicationPaths.cs" />
     <Compile Include="ConfigurationReaderWriter.cs" />
+    <Compile Include="FileCopier.cs" />
     <Compile Include="IdleTimeFinder.cs" />
     <Compile Include="ObjectCopier.cs" />
     <Compile Include="ObjectLogger.cs" />
