Add a menu to various Advanced panes (API, Process) to Open Log File

--- a/MultiMiner.Win/MultiMiner.Win.csproj
+++ b/MultiMiner.Win/MultiMiner.Win.csproj
@@ -358,6 +358,7 @@
     <None Include="Resources\application-control_play.png" />
     <None Include="Resources\computer-list.png" />
     <None Include="Resources\list-internet.png" />
+    <None Include="Resources\document-find.png" />
     <Content Include="window_sel.ico" />
   </ItemGroup>
   <ItemGroup>
