--- a/MultiMiner.Win/MultiMiner.Win.csproj
+++ b/MultiMiner.Win/MultiMiner.Win.csproj
@@ -297,6 +297,14 @@
       <Project>{70622816-5853-4470-9432-9acda2e96089}</Project>
       <Name>MultiMiner.MobileMiner.Api</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MultiMiner.Remoting.Client\MultiMiner.Remoting.Client.csproj">
+      <Project>{a729edf7-0b79-42e6-8fde-73df7f2b624d}</Project>
+      <Name>MultiMiner.Remoting.Client</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MultiMiner.Remoting.Server\MultiMiner.Remoting.Server.csproj">
+      <Project>{db1b318b-b57f-4bf4-8e05-befe7970f64c}</Project>
+      <Name>MultiMiner.Remoting.Server</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MultiMiner.Stats.Api\MultiMiner.Stats.Api.csproj">
       <Project>{2cf95427-df1d-4061-8580-f143f04a0439}</Project>
       <Name>MultiMiner.Stats.Api</Name>
