--- a/MultiMiner.Services/MultiMiner.Services.csproj
+++ b/MultiMiner.Services/MultiMiner.Services.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DB1B318B-B57F-4BF4-8E05-BEFE7970F64C}</ProjectGuid>
+    <ProjectGuid>{CFFA60EC-9486-4F45-BEF2-05C1A3D68EA6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MultiMiner.Remoting.Server</RootNamespace>
-    <AssemblyName>MultiMiner.Remoting.Server</AssemblyName>
+    <RootNamespace>MultiMiner.Services</RootNamespace>
+    <AssemblyName>MultiMiner.Services</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -33,20 +33,23 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DevicesService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RemotingServer.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MultiMiner.Services\MultiMiner.Services.csproj">
-      <Project>{cffa60ec-9486-4f45-bef2-05c1a3d68ea6}</Project>
-      <Name>MultiMiner.Services</Name>
+    <ProjectReference Include="..\MultiMiner.Engine\MultiMiner.Engine.csproj">
+      <Project>{845687bb-ec47-46d3-ac9d-6fcfb63de8f5}</Project>
+      <Name>MultiMiner.Engine</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MultiMiner.Utility\MultiMiner.Utility.csproj">
+      <Project>{99b0f266-eff7-4416-8c36-8356396a11ca}</Project>
+      <Name>MultiMiner.Utility</Name>
     </ProjectReference>
     <ProjectReference Include="..\MultiMiner.Xgminer\MultiMiner.Xgminer.csproj">
       <Project>{0dbef993-1b34-4d80-ab6a-f662604325dc}</Project>
