--- a/MultiMiner.Win/MultiMiner.Win.csproj
+++ b/MultiMiner.Win/MultiMiner.Win.csproj
@@ -289,6 +289,10 @@
       <Project>{5b2b2592-689a-4de2-815c-259427a3d101}</Project>
       <Name>MultiMiner.CoinWarz.Api</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MultiMiner.Discovery\MultiMiner.Discovery.csproj">
+      <Project>{ccb532cd-4922-42a9-baf9-0e651a592467}</Project>
+      <Name>MultiMiner.Discovery</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MultiMiner.Engine\MultiMiner.Engine.csproj">
       <Project>{845687bb-ec47-46d3-ac9d-6fcfb63de8f5}</Project>
       <Name>MultiMiner.Engine</Name>
