--- a/MultiMiner.Discovery/MultiMiner.Discovery.csproj
+++ b/MultiMiner.Discovery/MultiMiner.Discovery.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Broadcaster.cs" />
+    <Compile Include="InstanceDiscoveredArgs.cs" />
     <Compile Include="Listener.cs" />
     <Compile Include="Keys.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
