--- a/MultiMiner.Discovery/MultiMiner.Discovery.csproj
+++ b/MultiMiner.Discovery/MultiMiner.Discovery.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,6 +45,7 @@
     <Compile Include="Config.cs" />
     <Compile Include="InstanceDiscoveredArgs.cs" />
     <Compile Include="Listener.cs" />
+    <Compile Include="Packet.cs" />
     <Compile Include="Verbs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sender.cs" />
