Support for identifying "This PC" in Remoting - show Machine Name as well

--- a/MultiMiner.Discovery/MultiMiner.Discovery.csproj
+++ b/MultiMiner.Discovery/MultiMiner.Discovery.csproj
@@ -36,14 +36,14 @@
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Broadcaster.cs" />
     <Compile Include="Config.cs" />
-    <Compile Include="InstanceDiscoveredArgs.cs" />
+    <Compile Include="Instance.cs" />
+    <Compile Include="InstanceChangedArgs.cs" />
     <Compile Include="Listener.cs" />
     <Compile Include="Packet.cs" />
     <Compile Include="Verbs.cs" />
