Refactoring View code out into a ViewModel

--- a/MultiMiner.Win/MultiMiner.Win.csproj
+++ b/MultiMiner.Win/MultiMiner.Win.csproj
@@ -181,6 +181,8 @@
       <DependentUpon>StrategiesForm.cs</DependentUpon>
     </Compile>
     <Compile Include="UserAgent.cs" />
+    <Compile Include="ViewModels\DeviceViewModel.cs" />
+    <Compile Include="ViewModels\MainFormViewModel.cs" />
     <Compile Include="WindowsStartupShortcut.cs" />
     <Compile Include="WizardForm.cs">
       <SubType>Form</SubType>
